Resolved Page Responsiveness

--- a/index.css
+++ b/index.css
@@ -22,13 +22,16 @@ html{
     font-size: 0.75rem;
 }
 
-main{
-    height: 100vh;
-    width: 100vw;
+body{
+    min-height: 100vh;
+    background: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
     display: grid;
+    align-items: center;
     justify-content: center;
     align-content: center;
-    background: linear-gradient(hsl(273, 75%, 66%), hsl(240, 73%, 65%));
+}
+
+main{
     line-height: 1.5;
 }
 
@@ -131,8 +134,14 @@ main{
   }
 
   @media (max-width: 700px){
+
+    main{
+        margin-top: 10rem;
+    }
+    
     .main_container{
-        width:350px ;
+        /* width:350px ; */
+        width: 28rem;
         grid-template-columns: 1fr;
         grid-template-rows: 100px 1fr;
         grid-gap: 0.5rem;
@@ -166,7 +175,8 @@ main{
         }
 
         .ques_ans{
-            width: 100%;
+            width: 92%;
+            align-self: center;
         }
 
         .faq > h1{
